tests/baselines/reference/classAndInterface1.errors.txt
tests/cases/compiler/classAndInterface1.ts(1,7): error TS2300: Duplicate identifier 'cli'.
tests/cases/compiler/classAndInterface1.ts(2,11): error TS2300: Duplicate identifier 'cli'.


==== tests/cases/compiler/classAndInterface1.ts (2 errors) ====
    class cli { }
          ~~~
!!! error TS2300: Duplicate identifier 'cli'.
    interface cli { } // error
              ~~~
!!! error TS2300: Duplicate identifier 'cli'.